[package]
name = "ambientcg"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Rust interface around the ambientCG v2 web API"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
hex_color = "1.0"
reqwest = { version = "0.11", features = ["json"] }
spdx = "0.8"