[package]
name = "ambientcg"
version = "0.2.1"
authors = ["Elttob"]
edition = "2021"
license = "MIT"
description = "Rust interface around the ambientCG v2 web API"
repository = "https://github.com/Elttob/ambientcg-rs"
keywords = ["ambientcg", "web", "api", "3d", "assets"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
hex_color = "1.0"
reqwest = { version = "0.11", features = ["json"] }
spdx = "0.8"